Fix h3 on narrow screen.

--- a/site/maitria.sass
+++ b/site/maitria.sass
@@ -230,7 +230,8 @@ h2
   font-size: 100%
   @extend .story-base
   h3
-    height: 2em
+    height: 3em
+    text-align: left
   @media ($bigger-than-phone)
     margin-left: 15%
     margin-right: 15%
